--- a/config/nodes.yaml
+++ b/config/nodes.yaml
@@ -1,12 +1,39 @@
-nodes:
-  1: {id: 1, address: "localhost", port: 50051}
-  2: {id: 2, address: "localhost", port: 50052}
-  3: {id: 3, address: "localhost", port: 50053}
-  4: {id: 4, address: "localhost", port: 50054}
-  5: {id: 5, address: "localhost", port: 50055}
+# Multi-cluster configuration: 9 nodes organized into 3 clusters
+# Cluster 1: nodes 1-3 (shard: data items 1-3000)
+# Cluster 2: nodes 4-6 (shard: data items 3001-6000)
+# Cluster 3: nodes 7-9 (shard: data items 6001-9000)
 
-clients:
-  count: 10
+clusters:
+  1:
+    id: 1
+    shard_start: 1
+    shard_end: 3000
+    nodes: [1, 2, 3]
+  2:
+    id: 2
+    shard_start: 3001
+    shard_end: 6000
+    nodes: [4, 5, 6]
+  3:
+    id: 3
+    shard_start: 6001
+    shard_end: 9000
+    nodes: [7, 8, 9]
+
+nodes:
+  # Cluster 1
+  1: {id: 1, cluster: 1, address: "localhost", port: 50051}
+  2: {id: 2, cluster: 1, address: "localhost", port: 50052}
+  3: {id: 3, cluster: 1, address: "localhost", port: 50053}
+  # Cluster 2
+  4: {id: 4, cluster: 2, address: "localhost", port: 50054}
+  5: {id: 5, cluster: 2, address: "localhost", port: 50055}
+  6: {id: 6, cluster: 2, address: "localhost", port: 50056}
+  # Cluster 3
+  7: {id: 7, cluster: 3, address: "localhost", port: 50057}
+  8: {id: 8, cluster: 3, address: "localhost", port: 50058}
+  9: {id: 9, cluster: 3, address: "localhost", port: 50059}
+
+data:
+  total_items: 9000
   initial_balance: 10
-  client_ids: ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J"]
-  retry_timeout_ms: 50000
