fixed client functions

--- a/config/nodes.yaml
+++ b/config/nodes.yaml
@@ -36,5 +36,5 @@ nodes:
 
 data:
   total_items: 9000
-  initial_balance: 100000
-  checkpoint_interval: 100  # Checkpoint every N transactions (default: 100)
+  initial_balance: 10          # Default: 10 units per project spec (override with INITIAL_BALANCE env var)
+  checkpoint_interval: 100     # Checkpoint every N transactions (default: 100)
